# IrisBuild

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows.yml
doc/: functions.md  import.md  project.md  sample.md  scopevar.md
samples/igen/: ngfx.enums.hpp  ngfx.interface.hpp  ngfx.structs.hpp
samples/projects/android_proj/simplest/: local.properties
samples/projects/android_proj/simplest/app/: BUILD.ib  build.gradle
samples/projects/android_proj/simplest/app/src/main/: AndroidManifest.xml
samples/projects/android_proj/simplest/app/src/main/java/com/example/hellojnicallback/: JniHandler.java  MainActivity.java
samples/projects/android_proj/simplest/app/src/main/res/layout/: activity_main.xml
samples/projects/apple_proj/: raytracing.ib
samples/projects/apple_proj/MTLRaytracingSample.xcodeproj/: project.pbxproj
samples/projects/ios_metal_proj/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  build.ib  main.m
samples/projects/ispc_proj/: Build.ib
samples/projects/swift_proj/: BUILD.ib
samples/projects/swift_proj/TsinSwiftUI/: ContentView.swift  TsinSwiftUIApp.swift
samples/projects/swift_proj/TsinSwiftUI.xcodeproj/: project.pbxproj
samples/projects/windows_cuda_hip_proj/: main.cpp  sample.ib  test.aps  test.cu  test.h  test.hip  test.ispc  test.rc
samples/projects/windows_cuda_hip_proj/swarm-rs/: Cargo.toml
samples/projects/windows_cuda_hip_proj/swarm-rs/src/: lib.rs
samples/projects/windows_proj/: arc.mm  libobjc2.ib
src/: CMakeLists.txt  console_utils.cc  console_utils.h  file_type_register.cc  file_type_register.h  ibuild_WinRes.rc  ibuild_resource.h  main.cc  main_ui.cc  main_ui.h
src/common/: CMakeLists.txt  args_parse.cc  args_parse.hpp  base64.cc  base64.hpp  download.cc  download.hpp  hash_map.hpp  log.cc  log.hpp  md5.cc  md5.hpp  os.cc  os.hpp  pe_walker.cc  pe_walker.hpp  source_file.cc  source_file.hpp  stl.hpp  win32.cpp  win32.hpp  zip.cc  zip.hpp
src/generator/: CMakeLists.txt  gen.cc  gen.h  ninja.cc  ninja.h  vs.cc  vs.h  vsc.cc  vsc.h  xcode.cc  xcode.h  xcode_object.cc  xcode_object.h  xcode_writer.cc  xcode_writer.h  xml_writer.cc  xml_writer.h
src/igen/: CMakeLists.txt  main.cpp
src/igen/parse/: context.cpp  context.h  inter.lpp  inter.ypp  types.cpp  types.h  xige.h
src/igen/python/: cpp_gen.py
src/reflector/: CMakeLists.txt  builder.cc  main.cc  reflector.cc  reflector.h
src/rpc/: CMakeLists.txt  rpc.cc  rpc.h  rpc_client.cc  rpc_client.h  rpc_server.cc  rpc_server.h
src/sandbox/: CMakeLists.txt  dllmain.cc  entries.cc  entries.h  process_manager.cc  proto.cc  proto.h  settings.cc  settings.h  virtual_process.cc  virtual_process.h
src/standalone/: CMakeLists.txt  file_type_register.cc  file_type_register.h  main.cc  xbgn.aps  xbgn.rc
src/tool/: CMakeLists.txt  android.cc  android.h  build.cc  build.h  build_cproj.cc  cl_inc_tracker.cc  clang.cc  clang.h  detector.cc  detector.h  msvc.cc  msvc.h  toolchain.cc  toolchain.h
src/unittest/: CMakeLists.txt  msvc_compile_test.cc  path_test.cc  scope_test.cc
src/vm/: CMakeLists.txt  androidproj.cc  androidproj.h  cproj.cc  cproj.h  csproj.cc  csproj.h  depend.h  error_msg.cc  error_msg.h  file.cc  file.h  function.cc  function.h  import.cc  import.h  intrin_fns.cc  intrin_fns.h  node.cc  node.h  proj.cc  proj.h  scope.cc  scope.h  solution.cc  solution.h  token.cc  token.h  value.cc  value.h  vm.cc  vm.h  xb.lpp  xb.ypp
