[package]
name = "swarm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["minwindef","libloaderapi", "objidlbase"] }
enumflags2 = "0.7.10"
utf16_lit = "2.0.2"

[workspace]